--- a/fly.toml
+++ b/fly.toml
@@ -1,12 +1,14 @@
-# fly.toml app configuration file generated for power-demand-dashboard on 2024-08-29T12:00:00Z
+# fly.toml app configuration file for ML Power Nowcast Dashboard
 #
+# Production deployment combining React frontend and Python API
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "power-demand-dashboard"
+app = "ml-power-nowcast"
 primary_region = "sjc"
 
 [build]
+  dockerfile = "Dockerfile.production"
 
 [http_service]
   internal_port = 3000
@@ -18,9 +20,24 @@ primary_region = "sjc"
 
 [[vm]]
   cpu_kind = "shared"
-  cpus = 1
-  memory_mb = 1024
+  cpus = 2
+  memory_mb = 2048
 
 [env]
   NODE_ENV = "production"
-  NEXT_PUBLIC_API_URL = "https://your-local-api-url.ngrok.io"
+  API_PORT = "3000"
+  STATIC_DIR = "/app/static"
+  S3_BUCKET = "ml-power-nowcast-data-1756420517"
+  AWS_DEFAULT_REGION = "us-west-2"
+
+# Health check configuration
+[checks]
+  [checks.health]
+    grace_period = "10s"
+    interval = "30s"
+    method = "GET"
+    path = "/health"
+    port = 3000
+    protocol = "http"
+    timeout = "5s"
+    type = "http"
